--- a/package.json
+++ b/package.json
@@ -2,17 +2,28 @@
   "name": "ThirdPartyKiboPaymentsStarterKit",
   "version": "0.1.0",
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "lint": "eslint -c .eslintrc.js . --ext .js,.ts --fix",
+    "prettier:format": "prettier --write ."
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
     "grunt": "^1.5.3",
     "grunt-browserify": "^6.0.0",
     "grunt-contrib-jshint": "^3.2.0",
     "grunt-contrib-watch": "^1.1.0",
+    "grunt-eslint": "^24.0.0",
     "grunt-mozu-appdev-sync": "^2.4.2",
     "load-grunt-tasks": "^5.1.0",
     "mozu-action-helpers": "^0.5.6",
     "mozu-action-simulator": "^1.6.3",
     "time-grunt": "^2.0.0"
+  },
+  "dependencies": {
+    "@typescript-eslint/parser": "^5.36.1",
+    "eslint": "^8.23.0",
+    "grunt-ts": "^6.0.0-beta.22",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.2"
   }
 }
